--- a/app/assets/stylesheets/guest/layers/_community.sass
+++ b/app/assets/stylesheets/guest/layers/_community.sass
@@ -11,9 +11,14 @@
     width: 180px
     margin: 0px 8px
     border-radius: 10px
+    &_detail
+      @extend .community_content
+      width: 70px
+      margin: 0px 4px
   &_image
     .img-radius
       border-radius: 10px
+      margin-bottom: 0
   &_body
     width: 100%
     padding: 4px 10px
