--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -44,7 +44,6 @@ a
     @media (min-width: $screen-max-tablet)
       // float: left
       width: 100%
-      margin-right: 20px
       padding-top: 95px
     // SP
     @media (max-width: $screen-max-tablet)
@@ -80,6 +79,7 @@ a
       width: 100%
       margin: 0 0 10px
   &_banner
+    margin-bottom: 20px
     img
       margin: 0
   &_footer
