--- a/app/assets/stylesheets/guest/modules/_panel.sass
+++ b/app/assets/stylesheets/guest/modules/_panel.sass
@@ -1,9 +1,12 @@
 .panelList
   &_section
     overflow: hidden
-    padding: 20px
+    // padding: 20px
     img
       margin: 0
+      width: 100%
+  &_search_button
+    margin-bottom: 20px
   &_community_section
     overflow: hidden
     padding: 20px
