--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -1,33 +1,43 @@
 #layout_banner
   = image_tag 'premire_baner', width: '100%', class: 'baner-image'
-button.btn.btn-primary.btn-lg[type="button" data-toggle="modal" data-target="#sampleModal"]
-  |  検索
-#sampleModal.modal.fade[tabindex="-1"]
-  .modal-dialog
-    .modal-margin
-      .modal-content
-        .modal-header
-          button.close[type="button" data-dismiss="modal"]
-            span
-              | ×
-          h3.modal-title
-            | 検索
-        .modal-body
-          = render 'search'
-
-/ = paginate @user_profiles
 .panelList_section
+  .panelList_search_button.text-right
+    button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
+      |  条件検索
+    #sampleModal.modal.fade[tabindex="-1"]
+      .modal-dialog
+        .modal-margin
+          .modal-content
+            / .modal-header
+            /   button.close[type="button" data-dismiss="modal"]
+            /     span
+            /       | ×
+            .modal-body
+              = render 'search'
+
+
   - @user_profiles.each do |user|
-    = link_to search_path(user) do
-      .card_content
-        .card_image
-          = image_tag user.image1, size: '220', class: 'img-radius'
-          .card_info
-            .card_age = "#{user.age}歳"
-            .card_address = user.prefecture.name
-            .card_sex = image_tag "sex_badge_#{user.sex}"
-        .card_body
-          .card_name = user.user.name
-        .card_footer
-          .card_good = good(user.user)
+    .card_content
+      .card_image
+        = link_to image_tag(user.image1, width: '100%', height: '240', class: 'img-radius'), search_path(user)
+        .card_info
+          .card_age = "#{user.age}歳"
+          .card_address = user.prefecture.name
+          .card_sex = image_tag "sex_badge_#{user.sex}"
+      .card_body
+        .card_name = user.user.name
+      .card_footer
+        .card_good = good(user.user)
+    / = link_to search_path(user) do
+    /   .card_content
+    /     .card_image
+    /       = image_tag user.image1, size: '220', class: 'img-radius'
+    /       .card_info
+    /         .card_age = "#{user.age}歳"
+    /         .card_address = user.prefecture.name
+    /         .card_sex = image_tag "sex_badge_#{user.sex}"
+    /     .card_body
+    /       .card_name = user.user.name
+    /     .card_footer
+    /       .card_good = good(user.user)
 = paginate @user_profiles
