--- a/app/assets/stylesheets/guest/layers/_like.sass
+++ b/app/assets/stylesheets/guest/layers/_like.sass
@@ -45,12 +45,15 @@
   &_bottun
     width: 150px
     text-align: center
-    background: $red
-    color: $white
     position: absolute
     top: 80px
     right: 30px
-    font-size: 20px
+    background: $red
+    color: $white
+    font-size: 16px
+    padding: 10px
+    border-radius: 5px
+
 
 
 
