--- a/app/views/guest/_button_link.html.slim
+++ b/app/views/guest/_button_link.html.slim
@@ -2,7 +2,7 @@
   = good(@user)
 
 - if controller_name == 'likes'
-  = link_to 'ありがとう', match_like_path(id: @user, target: current_user), method: :post
+  = link_to 'ありがとう', match_like_path(id: @user, target: current_user)
 
 - if controller_name == 'messages'
   = link_to 'メッセージを送る', messages_path(id: @user, target: current_user), method: :post
