--- a/app/views/guest/messages/index.html.slim
+++ b/app/views/guest/messages/index.html.slim
@@ -1,25 +1,27 @@
 #layout_banner
   = image_tag 'premire_baner', width: '100%', class: 'baner-image'
 
-.tab_content
+.panelList_section
+  .tab_header
+    = link_to 'お相手からのイイね', likes_path, class: 'tab_bottun'
+    .tab_select_button マッチングメール
   #layout_flex
     #layout_message
       - @partnerships.each do |partnership|
-        - user = partnership.user == current_user ? partnership.target : partnership.user
+        - partner = partnership.user == current_user ? partnership.target : partnership.user
         .message_panel
-          = link_to message_path(user) do
+          = link_to search_path(partner) do
             .panel_container
               .panel_header
-                .panel_image  = image_tag user.user_profile.image1.thumb, class: 'img-circle', size: '100'
+                .panel_image  = image_tag partner.user_profile.image1.thumb, class: 'img-circle', size: '100'
                 .panel_info
-                  .panel_name = user.name
-                  .panel_age = "#{user.user_profile.age}歳"
-                  .panel_address = user.user_profile.prefecture.name
+                  .panel_name = partner.name
+                  .panel_age = "#{partner.user_profile.age}歳"
+                  .panel_address = partner.user_profile.prefecture.name
                 .panel_day = '2017年4月26日'
               .panel_body
-                = truncate(user.user_profile.introduce, omission: '・・・', length: 50)
-          .panel_bottun = link_to 'チャットする', message_path(id: partnership), method: :get
-      / .pagenate  = paginate @partners
+                = truncate(partner.user_profile.introduce, omission: '・・・', length: 50)
+          = link_to 'チャットする', message_path(id: partnership.id, partner_id: partner), method: :get, class: 'panel_bottun'
 
     - partnership = @partnerships.first
     - sender = partnership.user == current_user ? partnership.user : partnership.target
