--- a/app/assets/stylesheets/guest/layers/_message.sass
+++ b/app/assets/stylesheets/guest/layers/_message.sass
@@ -4,4 +4,27 @@
     width: 92%
     margin: 10px 20px
   &_container
-    bor
+    border: 2px solid $red
+    border-radius: 5px
+    margin: 10px 20px
+    padding: 10px 20px
+    overflow: hidden
+  &_card
+    width: 55%
+    border: 2px solid $red
+    border-radius: 5px
+    margin: 20px 0
+    padding: 5px 15px
+    &_right
+      @extend .message_card
+      margin-left: 45%
+      color: $white
+      background-color: $red
+    &_left
+      @extend .message_card
+      color: $red
+  &_text
+    border: 2px solid $red
+    border-radius: 5px
+    height: 70px
+    width: 100%
