--- a/app/views/guest/messages/show.html.slim
+++ b/app/views/guest/messages/show.html.slim
@@ -25,12 +25,14 @@
     #layout_message
       .message_container
         - @messages.each do |m|
-          - if m.sender_id == current_user.id
-            .text-right =  m.body
-          - else
-            .text-left = m.body
-        = form_for @message, remote: true do |f|
-          = f.text_field :body
-          = f.hidden_field :partnership_id, value: @partnership.id
-          = f.hidden_field :sender_id, value: @partner.id
-          = f.submit "送信", :class => "btn btn-primary", data: { disable_with: "送信中..." }
+            - if m.sender_id == current_user.id
+              .message_card_right =  m.body
+            - else
+              .message_card_left = m.body
+        .message_form
+          = form_for @message, remote: true do |f|
+            = f.text_field :body, class: 'message_text'
+            = f.hidden_field :partnership_id, value: @partnership.id
+            = f.hidden_field :sender_id, value: current_user.id
+            = f.submit "送信", :class => "btn btn-danger pull-right", data: { disable_with: "送信中..." }
+      = paginate @messages
