--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -14,18 +14,21 @@
             /       | ×
             .modal-body
               = render 'search'
+  .card_list
+    - @user_profiles.each do |user|
+      .card_content
+        .card_image
+          = link_to image_tag(user.image1, width: '100%', height: '240', class: 'img-radius'), search_path(user)
+          .card_info
+            .card_age = "#{user.age}歳"
+            .card_address = user.prefecture.name
+            .card_sex = image_tag "sex_badge_#{user.sex}"
+        .card_body
+          .card_name = user.user.name
+        .card_footer
+          - if good(user.user)
+            .card_liked_button イイね済
+          - else
+            .card_like_button = link_to 'イイね', likes_path(id: current_user, target: user), method: :post
 
-
-  - @user_profiles.each do |user|
-    .card_content
-      .card_image
-        = link_to image_tag(user.image1, width: '100%', height: '240', class: 'img-radius'), search_path(user)
-        .card_info
-          .card_age = "#{user.age}歳"
-          .card_address = user.prefecture.name
-          .card_sex = image_tag "sex_badge_#{user.sex}"
-      .card_body
-        .card_name = user.user.name
-      .card_footer
-        .card_good = good(user.user)
-= paginate @user_profiles
+  = paginate @user_profiles
