--- a/app/views/guest/topics/_topic.html.slim
+++ b/app/views/guest/topics/_topic.html.slim
@@ -20,7 +20,7 @@ section.murmur_panel
       = 'スマイル'
     .murmur_items
       - if current_user == topic.writer
-        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#EditModal"]
+        button.edit_button.btn.btn-info[type="button" data-toggle="modal" data-target="#EditModal"]
           |  編集
         #EditModal.modal.fade[tabindex="-1"]
           .modal-dialog
@@ -35,8 +35,8 @@ section.murmur_panel
                 .modal-body
                   = render 'guest/topics/edit', topic: topic
         / = link_to '編集', edit_topic_path(id: topic)
-        = link_to '削除', topic_path(id: topic), method: :delete, data: { confirm: 'Are you sure?' }
-      button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#ChatModal"]
+        = link_to '削除', topic_path(id: topic), method: :delete,class: 'btn btn-info', data: { confirm: 'Are you sure?' }
+      button.edit_button.btn.btn-info[type="button" data-toggle="modal" data-target="#ChatModal"]
         |  コメントするのか
       #ChatModal.modal.fade[tabindex="-1"]
         .modal-dialog
@@ -51,9 +51,21 @@ section.murmur_panel
               .modal-body
                 = render 'guest/topics/chat_form', topic: topic
   .murmur_comments
-    - topic.chats.limit(2).each do |chat|
+    - topic.chats.limit(3).each do |chat|
       = image_tag chat.user.user_profile.image1.thumb, class: 'img-circle', size: '50'
       = chat.user.name
       br
       = chat.body
       hr
+  / TODO: 数はリファクタ
+  - if topic.chats.size > 3
+    .text-right
+      button.btn.btn-default data-target="##{topic.id}" data-toggle="collapse" type="button"  もっと見る
+    .collapse id="#{topic.id}"
+
+      - topic.chats.offset(3).each do |chat|
+        = image_tag chat.user.user_profile.image1.thumb, class: 'img-circle', size: '50'
+        = chat.user.name
+        br
+        = chat.body
+        hr
