--- a/app/views/guest/communities/show.html.slim
+++ b/app/views/guest/communities/show.html.slim
@@ -33,11 +33,11 @@
           .modal-margin
             .modal-content
               .modal-header
-                button.close[type="button" data-dismiss="modal"]
-                  span
-                    | ×
-                h3.modal-title
-                  | 検索
+                / button.close[type="button" data-dismiss="modal"]
+                /   span
+                /     | ×
+                / h3.modal-title
+                /   | 検索
               .modal-body
                 = render 'guest/topics/form'
     - @topics.each do |topic|
