--- a/app/views/guest/topics/_chat_form.html.slim
+++ b/app/views/guest/topics/_chat_form.html.slim
@@ -1,6 +1,9 @@
 = form_for(@topic_chat, url: chat_topic_path(topic) ) do |f|
-  = f.label :コメント
-  = f.text_area :body
-  = f.hidden_field :community_id, value: @community.id
-  = f.hidden_field :user_id, value: current_user.id
-  = f.submit '保存'
+  .row
+    .col-md-12.text-center
+      .form-group
+        = f.label :コメント
+        = f.text_area :body, class: 'form-control'
+      = f.hidden_field :community_id, value: @community.id
+      = f.hidden_field :user_id, value: current_user.id
+      = f.submit '保存', class: "btn btn-info text-center"
