--- a/app/views/guest/topics/_form.html.slim
+++ b/app/views/guest/topics/_form.html.slim
@@ -1,8 +1,15 @@
 = form_for(@topic, url: topics_path ) do |f|
-  = f.label :title
-  = f.text_field :title
-  = f.label :body
-  = f.text_area :body
-  = f.hidden_field :community_id, value: @community.id
-  = f.hidden_field :user_id, value: current_user.id
-  = f.submit '保存'
+  .row
+    .col-md-12.text-center
+      .form-group
+        = f.label :title
+        = f.text_field :title, class: 'form-control'
+
+      .form-group
+        = f.label :body
+        = f.text_area :body, class: 'form-control'
+
+      = f.hidden_field :community_id, value: @community.id
+      = f.hidden_field :user_id, value: current_user.id
+
+      = f.submit '保存', class: "btn btn-info text-center"
