コミュニティ参加ボタン修正

--- a/app/assets/stylesheets/guest/layers/_community.sass
+++ b/app/assets/stylesheets/guest/layers/_community.sass
@@ -37,6 +37,9 @@
   &_detail
     display: flex
     // justify-content: space-between
+    &_image
+      width: 300px
+      height: 300px
     .img-radius
       border-radius: 15px
     &_body
