--- a/app/views/guest/communities/show.html.slim
+++ b/app/views/guest/communities/show.html.slim
@@ -33,9 +33,9 @@
           .modal-margin
             .modal-content
               .modal-header
-                / button.close[type="button" data-dismiss="modal"]
-                /   span
-                /     | ×
+                button.close[type="button" data-dismiss="modal"]
+                  span
+                    | ×
                 / h3.modal-title
                 /   | 検索
               .modal-body
