--- a/app/views/guest/murmurs/_murmur.html.slim
+++ b/app/views/guest/murmurs/_murmur.html.slim
@@ -19,13 +19,19 @@ section.murmur_panel
       = image_tag 'smile', width: '50'
       = 'スマイル'
     .murmur_items
-      - if current_user == murmur.user
-        = link_to '編集', edit_murmur_path(id: murmur)
-        = link_to '削除', murmur_path(id: murmur), method: :delete, data: { confirm: 'Are you sure?' }
-        = link_to 'コメントする', new_murmur_comment_path(id: murmur.id)
-      - else
-        = link_to 'コメントする', new_murmur_comment_path(id: murmur.id)
-  .murmur_comments
+      / テスト
+      button.edit_button.btn.btn-default[type="button" data-toggle="modal" data-target="#EditModal#{murmur.id}"]
+        |  編集する
+      = link_to '削除', murmur_path(id: murmur), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' }
+      button.edit_button.btn.btn-default[type="button" data-toggle="modal" data-target="#CommentModal#{murmur.id}"]
+        |  コメント
+      = render 'modal', murmur: murmur
+
+      - if murmur.comments.size > 1
+        .text-right
+          button.btn.btn-default data-target="##{murmur.id}" data-toggle="collapse" type="button" = "コメント#{murmur.comments.size}件"
+
+  .murmur_comments.collapse id="#{murmur.id}"
     - murmur.comments.each do |comment|
       = image_tag comment.user.user_profile.image1.thumb, class: 'img-circle', size: '50'
       = comment.user.name
