ヘッダー修正

--- a/app/assets/stylesheets/guest/_settings.sass
+++ b/app/assets/stylesheets/guest/_settings.sass
@@ -20,8 +20,8 @@ $black: #000
 $light-black:#777777
 $light-gray: #f0f0f0
 $gray: #ddd
-$red: #A90021
-$wine-red: #330015
+$red: #B41109
+$wine-red: #7d0000
 $label-red: lighten($red, 50%)
 $yellow: #FEC719
 $pink: #DF3BCF
