--- a/app/views/guest/_header.html.slim
+++ b/app/views/guest/_header.html.slim
@@ -9,14 +9,24 @@
       .navbar_logout_button
         = button_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-danger'
 
-  .navbar-sub
-    .navbar-body
-      ul.navbar-content
-        li = link_to "さがす", searches_path
-        li = link_to "いいね", likes_path
-        li = link_to 'コミュニティ', communities_path
-        li = link_to 'つぶやき', murmurs_path
-        li = link_to "マイページ", user_path(current_user)
+  #menu
+    ul
+      li = link_to "さがす", searches_path
+      li = link_to "いいね", likes_path
+      li = link_to 'コミュニティ', communities_path
+      li = link_to 'つぶやき', murmurs_path
+      li = link_to "マイページ", user_path(current_user)
+
+
+
+  / .navbar-sub
+  /   .navbar-body
+  /     ul.navbar-content
+  /       li = link_to "さがす", searches_path
+  /       li = link_to "いいね", likes_path
+  /       li = link_to 'コミュニティ', communities_path
+  /       li = link_to 'つぶやき', murmurs_path
+  /       li = link_to "マイページ", user_path(current_user)
 
   / #sidemenu-button = fa_icon 'bars'
 
