コメントしたユーザーにリンク追加

--- a/app/assets/stylesheets/guest/layers/_navbar.sass
+++ b/app/assets/stylesheets/guest/layers/_navbar.sass
@@ -102,8 +102,12 @@
         width: 100%
         text-align: center
         font-size: 14px
+        // &:visited
+        //   background-color: $white
+        //   color: $red
         &:hover
           background-color: $white
           color: $red
-
+      // .on
+      //   background-color: $white
 
