--- a/app/assets/stylesheets/guest/layers/_search.sass
+++ b/app/assets/stylesheets/guest/layers/_search.sass
@@ -57,3 +57,6 @@
     padding: 8px
     background-color: $white
     border: solid 1px $red
+    &:hover
+      background-color: $white
+      color: $red
