マイページ画像追加

--- a/app/views/guest/users/_modal.html.slim
+++ b/app/views/guest/users/_modal.html.slim
@@ -223,3 +223,27 @@
                 = f.submit "プロフィールを更新", :class => "btn btn-info"
 
 
+/ 基本プロフィール編集
+#ImageModal1.modal.fade[tabindex="-1"]
+  .modal-dialog
+    .modal-margin
+      .modal-content
+        .modal-header
+          button.close[type="button" data-dismiss="modal"]
+            span
+              | ×
+        .modal-body
+          = form_for @user.user_profile, url: user_path(current_user) do |f|
+            .row.text-center
+              .col-md-4.imgInput.form-group
+                = image_tag @user.user_profile.image1, class: "imgView img-radius img-responsive"
+                = f.file_field :image1, class: "form-control image-field"
+              .col-md-4.imgInput.form-group
+                = image_tag @user.user_profile.image2, class: "imgView img-radius img-responsive"
+                = f.file_field :image2, class: "form-control image-field"
+              .col-md-4.imgInput.form-group
+                = image_tag @user.user_profile.image3, class: "imgView img-radius img-responsive"
+                = f.file_field :image3, class: "form-control image-field"
+              = f.submit "プロフィールを更新", :class => "btn btn-info"
+
+
