--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -23,9 +23,9 @@
         = image_tag 'sex_badge_l', class: 'img-label'
         h5 サブ写真追加
       .sidebar_sub_images
-        = image_tag @user.user_profile.image1, class: "img-radius", size: '80'
-        = image_tag @user.user_profile.image2, class: "img-radius", size: '80'
-        = image_tag @user.user_profile.image3, class: "img-radius", size: '80'
+        = link_to image_tag(@user.user_profile.image1, class: "img-radius", size: '80'), "#ImageModal1", data: {toggle: 'modal'}
+        = link_to image_tag(@user.user_profile.image2, class: "img-radius", size: '80'), "#ImageModal1", data: {toggle: 'modal'}
+        = link_to image_tag(@user.user_profile.image3, class: "img-radius", size: '80'), "#ImageModal1", data: {toggle: 'modal'}
         = image_tag 'add_badge', size: '80'
     / ユーザーステータス
     .sidebar_status
