ボタン修正

--- a/app/assets/stylesheets/guest/_settings.sass
+++ b/app/assets/stylesheets/guest/_settings.sass
@@ -23,6 +23,7 @@ $gray: #ddd
 $red: #B41109
 $wine-red: #7d0000
 $label-red: lighten($red, 10%)
+$light-red: lighten($red, 55%)
 $yellow: #FEC719
 $pink: #DF3BCF
 $green: #37B42C
