--- a/app/assets/stylesheets/guest/layers/_like.sass
+++ b/app/assets/stylesheets/guest/layers/_like.sass
@@ -51,8 +51,17 @@
     background: $red
     color: $white
     font-size: 16px
-    padding: 10px
     border-radius: 5px
+    &:hover
+      background-color: $label-red
+    a
+      display: block
+      padding: 8px
+      width: 100%
+      text-decoration: none
+      &:hover
+        color: $white
+        text-decoration: none
 
 
 
