--- a/app/assets/stylesheets/guest/layers/_message.sass
+++ b/app/assets/stylesheets/guest/layers/_message.sass
@@ -3,6 +3,8 @@
     position: relative
     width: 92%
     margin: 10px 20px
+    &:nth-child(1)
+      background-color: $light-red
   &_container
     border: 2px solid $red
     border-radius: 5px
