--- a/app/views/guest/messages/index.html.slim
+++ b/app/views/guest/messages/index.html.slim
@@ -21,7 +21,7 @@
                 .panel_day = '2017年4月26日'
               .panel_body
                 = truncate(partner.user_profile.introduce, omission: '・・・', length: 50)
-          = link_to 'チャットする', message_path(id: partnership.id, partner_id: partner.id), method: :get, class: 'panel_bottun'
+          .panel_bottun = link_to 'チャットする', message_path(id: partnership.id, partner_id: partner.id), method: :get
       / = paginate @partnerships
 
 
