--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -65,8 +65,6 @@
   @extend %button
   @extend %button_red
   @extend %button_large
-  width: 100%
-  padding: 20px
-  font-size: 18px
-
-
+  @extend %button_like
+  a
+    padding: 12px
