--- a/app/assets/stylesheets/guest/parts/_button.sass
+++ b/app/assets/stylesheets/guest/parts/_button.sass
@@ -77,6 +77,21 @@ button
     +fontsize($font-xsmall)
   &_preview
     @extend %button
+  &_like
+    display: block
+    font-size: 18px
+    padding: 0
+    width: 100%
+    &:hover
+      background-color: $label-red
+    a
+      display: block
+      padding: 8px
+      width: 100%
+      text-decoration: none
+      &:hover
+        color: $white
+        text-decoration: none
 
 .like_button
   @extend %button
