--- a/app/assets/stylesheets/guest/parts/_button.sass
+++ b/app/assets/stylesheets/guest/parts/_button.sass
@@ -78,3 +78,32 @@ button
   &_preview
     @extend %button
 
+.like_button
+  @extend %button
+  @extend %button_red
+  @extend %button_large
+  display: block
+  font-size: 18px
+  padding: 0
+  width: 100%
+  // width: 75%
+  // margin: 0 auto
+  &:hover
+    background-color: $label-red
+  a
+    display: block
+    padding: 8px
+    width: 100%
+    text-decoration: none
+    &:hover
+      color: $white
+      text-decoration: none
+.liked_button
+  @extend .like_button
+  color: $red
+  padding: 8px
+  background-color: $white
+  border: solid 1px $red
+  &:hover
+    background-color: $white
+    color: $red
