一旦コミット

--- a/app/assets/stylesheets/guest/layers/_preview.sass
+++ b/app/assets/stylesheets/guest/layers/_preview.sass
@@ -9,6 +9,8 @@
     width: 400px
     height: 400px
     overflow: hidden
+    +responsive(smartphone)
+      width: 100%
   .main li.item2, .main li.item3, .main li.item4
     display: none
   .main li:hover img
