--- a/app/assets/stylesheets/guest/modules/_panel.sass
+++ b/app/assets/stylesheets/guest/modules/_panel.sass
@@ -5,6 +5,8 @@
     img
       margin: 0
       width: 100%
+    +responsive(smartphone)
+      padding: 0 5%
   &_search_button
     margin-bottom: 20px
   &_community_section
