--- a/app/views/guest/users/preview.html.slim
+++ b/app/views/guest/users/preview.html.slim
@@ -5,7 +5,7 @@
       ul.main
         / TODO: あとでimageとimage1の順番変更
         li.item1.sidebar_image
-          = image_tag @user.user_profile.image1, class: "img-radius", size: '400'
+          = image_tag @user.user_profile.image1, class: "img-radius", size: '100%'
         li.item2
           = image_tag @user.image, class: "img-radius", size: '400'
         li.item3
