--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -24,6 +24,8 @@ html
           = content_tag(:div, value, class: "alert_#{key}")
       // content
       #layout_content
+        #layout_banner
+          = image_tag 'premire_baner', width: '100%', class: 'baner-image'
         = yield
 
     // footer
