--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -48,10 +48,12 @@ a
     // SP
     @media (max-width: $screen-max-tablet)
       width: 100%
+      padding-top: 110px
       margin: 0 0 10px
   &_flex
-    display: flex
-    padding-top: 30px
+    @media (min-width: $screen-max-tablet)
+      display: flex
+      padding-top: 30px
   &_sidebar
     // PC
     @media (min-width: $screen-max-tablet)
@@ -60,6 +62,7 @@ a
     // SP
     @media (max-width: $screen-max-tablet)
       width: 100%
+      margin-bottom: 20px
   &_right
     @media (min-width: $screen-max-tablet)
       // float: left
